--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terms of Service</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        p {
+            margin: 10px 0;
+        }
+    </style>
+</head>
+<body>
+    <h1>Terms of Service</h1>
+
+    <h2>1. Acceptance of Terms</h2>
+    <p>By using this service, you accept and agree to be bound by these terms. These terms may be updated from time to time without notice. It is your responsibility to check for updates.</p>
+
+    <h2>2. Use of the Service</h2>
+    <p>You must use the service responsibly and comply with all applicable laws.</p>
+    <p>You may not use the service to harm, disrupt, or interfere with others' use of the service.</p>
+
+    <h2>3. User Responsibilities</h2>
+    <p>Do not misuse the service or attempt to exploit its features.</p>
+    <p>You are responsible for maintaining the confidentiality of your account credentials, if applicable.</p>
+
+    <h2>4. Intellectual Property</h2>
+    <p>All content, trademarks, and assets in the service are the property of Things with christianity or its licensors. Unauthorized use is prohibited.</p>
+
+    <h2>5. Disclaimer of Warranties</h2>
+    <p>The service is provided "as is" without any guarantees or warranties, express or implied. We do not guarantee uninterrupted or error-free operation.</p>
+
+    <h2>6. Limitation of Liability</h2>
+    <p>We are not liable for any direct, indirect, incidental, or consequential damages arising from your use of the service.</p>
+
+    <h2>7. Termination</h2>
+    <p>We reserve the right to terminate or suspend your access to the service at any time for any reason.</p>
+
+    <h2>8. Contact Information</h2>
+    <p>If you have any questions or concerns about these terms, please contact us at robloxvcaccholder@gmail.com.</p>
+</body>
+</html>
 
